syntax = "proto3";

package authpb;

option go_package = "github.com/Koshsky/subs-service/auth-service/internal/authpb";

// Token validation request
message TokenRequest {
  string token = 1;
}

// Response with user information
message UserResponse {
  string user_id = 1;
  string email = 2;
  bool valid = 3;
  string error = 4;
}

// Request for user registration
message RegisterRequest {
  string email = 1;
  string password = 2;
}

// Response for user registration
message RegisterResponse {
  string user_id = 1;
  string email = 2;
  bool success = 3;
  string error = 4;
  string message = 5;
}

// Login request
message LoginRequest {
  string email = 1;
  string password = 2;
}

// Login response
message LoginResponse {
  string token = 1;
  string user_id = 2;
  string email = 3;
  bool success = 4;
  string error = 5;
  string message = 6;
}

// Authentication service
service AuthService {
  // Token validation and user information retrieval
  rpc ValidateToken(TokenRequest) returns (UserResponse);

  // New user registration
  rpc Register(RegisterRequest) returns (RegisterResponse);

  // User login
  rpc Login(LoginRequest) returns (LoginResponse);
}